--- a/comicsdb/templates/comicsdb/publisher_detail.html
+++ b/comicsdb/templates/comicsdb/publisher_detail.html
@@ -132,19 +132,8 @@
       </div>
       <!-- end of summary -->
       <!-- attribution -->
-      {% if publisher.attribution %}
-        {% for w in publisher.wikipedia %}
-        <div class="box">
-          <h1 class="title is-5">Attribution</h1>
-          <div class="content">
-            This article uses material from <a href={{w.url}}>Wikipedia</a>, 
-            which is released under the
-            <a href="https://creativecommons.org/licenses/by-sa/3.0/">
-              Creative Commons Attribution-Share-Alike License 3.0
-            </a>.
-          </div>
-        </div>
-        {% endfor %}
+      {% if publisher.attribution.all|length > 0 %}
+          {% include "comicsdb/attribution.html" with object=publisher %}
       {% endif %}
       <!-- end attribution-->
     </div>
