--- a/comicsdb/templates/comicsdb/team_detail.html
+++ b/comicsdb/templates/comicsdb/team_detail.html
@@ -167,19 +167,8 @@
       {% endwith %}
       <!-- end members -->
       <!-- attribution -->
-      {% if team.attribution %}
-        {% for w in team.wikipedia %}
-        <div class="box">
-          <h1 class="title is-5">Attribution</h1>
-          <div class="content">
-            This article uses material from <a href={{w.url}}>Wikipedia</a>, 
-            which is released under the
-            <a href="https://creativecommons.org/licenses/by-sa/3.0/">
-              Creative Commons Attribution-Share-Alike License 3.0
-            </a>.
-          </div>
-        </div>
-        {% endfor %}
+      {% if team.attribution.all|length > 0 %}
+          {% include "comicsdb/attribution.html" with object=team %}
       {% endif %}
       <!-- end attribution-->
     </div>
