Use entity name for copyright symbol in attribution template

--- a/comicsdb/templates/comicsdb/attribution.html
+++ b/comicsdb/templates/comicsdb/attribution.html
@@ -8,7 +8,7 @@
             Creative Commons Attribution-Share-Alike License 3.0
           </a>.</p>
       {% elif obj.source == "M" %}
-        <p>Some data provided by <a href={{ obj.url }}>Marvel</a>. © 2014 Marvel</p>
+        <p>Some data provided by <a href={{ obj.url }}>Marvel</a>. &copy; 2014 Marvel</p>
       {% endif %}
     {% endfor %}
   </div>
