--- a/templates/footer.html
+++ b/templates/footer.html
@@ -8,6 +8,6 @@
           Commons License" style="border-width:0"
           src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />This work is
       licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative
-        Commons Attribution-ShareAlike 4.0 International License</a>.</p>
+        Commons Attribution-ShareAlike 4.0 International License</a>, except where noted otherwise.</p>
   </div>
 </footer>
