--- a/comicsdb/templates/comicsdb/series_form.html
+++ b/comicsdb/templates/comicsdb/series_form.html
@@ -4,48 +4,54 @@
 
 {% block title %}Series Form{% endblock title %}
 
+{% block headscripts %}
+{{ form.media.css }}
+<script src="{% static 'admin/js/vendor/jquery/jquery.js' %}"></script>
+{% endblock %}
+
 {% block comic_content %}
-  <h1 class="title">Series Form</h1>
-  {{ form.media }}
-  <form method="post">
+<h1 class="title">Series Form</h1>
+<form method="post">
   {% csrf_token %}
-    {% if form.errors %}
-      {% for field in form %}
-        {% for error in field.errors %}
-          <div class="notification is-danger">
-            <strong>{{ error|escape }}</strong>
-          </div>
-        {% endfor %}
-      {% endfor %}
-      {% for error in form.non_field_errors %}
+  {% if form.errors %}
+    {% for field in form %}
+      {% for error in field.errors %}
         <div class="notification is-danger">
           <strong>{{ error|escape }}</strong>
         </div>
       {% endfor %}
-    {% endif %}
-    {% for field in form %}
-      <div class="field">
-        <label class="label">{{ field.label }}</label>
-        {% if field|is_select %}
-        <div class="control">
-          <div class="select is-fullwidth {% if field|is_multiple_select %}is-multiple{% endif %}">
-            {{ field }}
-          </div>
-        </div>
-        {% else %}
-          <div class="control">{{ field }}</div>
-        {% endif %}
-        {% if field.help_text %}
-          <ul>
-            <li class="help">{{ field.help_text|safe }}</li>
-          </ul>
-        {% endif %}
+    {% endfor %}
+    {% for error in form.non_field_errors %}
+      <div class="notification is-danger">
+        <strong>{{ error|escape }}</strong>
       </div>
     {% endfor %}
+  {% endif %}
+  {% for field in form %}
     <div class="field">
+      <label class="label">{{ field.label }}</label>
+      {% if field|is_select %}
       <div class="control">
-        <button class="button is-info" type="submit">Submit</button>
+        <div class="select is-fullwidth">
+          {{ field }}
+        </div>
       </div>
+      {% else %}
+        <div class="control">{{ field }}</div>
+      {% endif %}
+      {% if field.help_text %}
+        <p class="help">{{ field.help_text|safe }}</p>
+      {% endif %}
     </div>
-  </form>
+  {% endfor %}
+  <div class="field">
+    <div class="control">
+      <button class="button is-info" type="submit">Submit</button>
+    </div>
+  </div>
+</form>
+{% endblock %}
+
+{% block js %}
+{{ form.media.js }}
 {% endblock %}
