Initialize the bulma calendar widgets

--- a/comicsdb/templates/comicsdb/issue_form.html
+++ b/comicsdb/templates/comicsdb/issue_form.html
@@ -200,4 +200,10 @@
       });
   })
 </script>
+<script type="text/javascript">
+  $(function() {
+    var metronOptions = {color: "link"}
+    bulmaCalendar.attach('[type="date"]', metronOptions);
+  })
+</script>
 {% endblock %}
