Add contact links to home page info box

--- a/comicsdb/templates/comicsdb/home.html
+++ b/comicsdb/templates/comicsdb/home.html
@@ -21,43 +21,41 @@
         <!-- info box -->
         <div class="box">
           <h1 class="title is-5">What?</h1>
-          <h2 class="subtitle is-6">
-            <strong>Metron</strong>
-            is a community-based site whose goal is to build an open database with a
+          <div class="content">
+            <p><strong>Metron</strong> is a community-based site whose goal is to build an open database with a
             <a href="https://en.wikipedia.org/wiki/Representational_state_transfer">REST</a> API for
-            comics.
-          </h2>
-          <br />
+            comics.</p>
+          </div>
           <h1 class="title is-5">Why?</h1>
-          <h2 class="subtitle is-6">
-            Currently the only comic book database the provides a REST API for users is
+          <div class="content">
+            <p>Currently the only comic book database the provides a REST API for users is
             <a href="https://comicvine.gamespot.com/">Comic Vine</a>. Unfortunately, since it's a corporately-owned service, 
             the community that uses it has no control over the amount of resources provided to maintain it or ensure it's 
-            continued accessibility.
-          </h2>
-          <br />
+            continued accessibility.</p>
+          </div>
           <h1 class="title is-5">Want to join?</h1>
-          <h2 class="subtitle is-6">
-            Sign-up for an account and read the <a href="{% url 'flatpage:editing-guidelines' %}">Editing
-              Guidelines</a> before adding information to the database.
-          </h2>
-          <br />
+          <div class="content">
+            <p>Sign-up for an account and read the <a href="{% url 'flatpage:editing-guidelines' %}">Editing 
+              Guidelines</a> before adding information to the database.</p>
+          </div>
           <h1 class="title is-5">Want to use Metron's API?</h1>
-          <h2 class="subtitle is-6">
-            If you want to use the data from Metron, there is a <a href="https://www.python.org/">Python</a> wrapper called <a href="https://github.com/bpepple/mokkari">Mokkari</a> to make it easy to use the API.
-          </h2>
-          <br />
+          <div class="content">
+            <p>If you want to use the data from Metron, there is a <a href="https://www.python.org/">Python</a> wrapper called 
+              <a href="https://github.com/bpepple/mokkari">Mokkari</a> to make it easy to use the API.</p>
+          </div>
           <h1 class="title is-5">Need to tag your comic archives?</h1>
-          <h2 class="subtitle is-6">
-            If you wish to tag your comic archives with metadata from Metron, head over Github
-            and install <a href="https://github.com/bpepple/metron-tagger">Metron-Tagger</a>.
-          </h2>
-          <br />
+          <div class="content">
+            <p>If you wish to tag your comic archives with metadata from Metron, head over Github
+            and install <a href="https://github.com/bpepple/metron-tagger">Metron-Tagger</a>.</p>
+          </div>
           <h1 class="title is-5">Questions?</h1>
-          <h2 class="subtitle is-6">
-            Have questions not covered here or suggestions? If so, head over to the 
-            <a href="https://github.com/bpepple/metron/discussions">Discussions</a> page at Github and ask there.
-          </h2>
+          <div class="content">
+            <p>Have questions not covered here or suggestions? If so, feel free to contact us at either of these places:</p>
+            <ul>
+              <li><a href="https://matrix.to/#/#metron:matrix.org">Matrix Chat</a></li>
+              <li><a href="https://github.com/bpepple/metron/discussions">GitHub Discussions</a></li>
+            </ul>
+          </div>
         </div>
         <!-- end info box -->
 
