Hacky fix of autocomlete widget focus
- Drop this once this bug is fixed:

https://github.com/yourlabs/django-autocomplete-light/issues/1283

--- a/comicsdb/templates/comicsdb/issue_form.html
+++ b/comicsdb/templates/comicsdb/issue_form.html
@@ -200,4 +200,21 @@
       });
   })
 </script>
+/*
+* Hacky fix for a bug in select2 with jQuery 3.6.0's new nested-focus "protection"
+* see: https://github.com/select2/select2/issues/5993
+* see: https://github.com/jquery/jquery/issues/4382
+*
+* TODO: Recheck with the select2 GH issue and remove once this is fixed on their side
+*/
+<script type="text/javascript">
+$(document).on('select2:open', () => {
+    let allFound = document.querySelectorAll('.select2-container--open .select2-search__field');
+    $(this).one('mouseup keyup',()=>{
+        setTimeout(()=>{
+            allFound[allFound.length - 1].focus();
+        },0);
+    });
+});
+</script>
 {% endblock %}
