Update Matrix invite link

--- a/comicsdb/templates/comicsdb/home.html
+++ b/comicsdb/templates/comicsdb/home.html
@@ -52,7 +52,7 @@
           <div class="content">
             <p>Have questions not covered here or suggestions? If so, feel free to contact us at either of these places:</p>
             <ul>
-              <li><a href="https://matrix.to/#/#metron:matrix.org">Matrix Chat</a></li>
+              <li><a href="https://matrix.to/#/#metrondb:matrix.org">Matrix Chat</a></li>
               <li><a href="https://github.com/bpepple/metron/discussions">GitHub Discussions</a></li>
             </ul>
           </div>
